SSC-920 blog, archive, fix alignment on small viewport

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-blog.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-blog.less
@@ -21,3 +21,23 @@
         }
     }
 }
+
+.blogposts {
+    .c-accordion__body .c-accordion__title {
+        text-align: right;
+    }
+}
+
+@media screen and (max-width: @screen-sm) {
+    .blogposts {
+        .c-accordion__title {
+            text-align: left;
+        }
+
+        .c-accordion__body {
+            .c-accordion__title {
+                text-align: right;
+            }
+        }
+    }
+}
